Closed
Bug 1330679
Opened 8 years ago
Closed 8 years ago
Crash in mozilla::dom::workers::ServiceWorkerManager::ActorFailed
Categories
(Core :: DOM: Service Workers, defect)
Tracking
()
RESOLVED
FIXED
mozilla53
People
(Reporter: bkelly, Assigned: bkelly)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
6.12 KB,
patch
|
baku
:
review+
lizzard
:
approval-mozilla-aurora+
lizzard
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is report bp-7a547477-bd24-4381-b41a-76c532170111. ============================================================= This is a crash due to the browser shutting down while we are trying to initialize the ServiceWorkerManager. We should let shutdown proceed in this case.
Assignee | ||
Comment 1•8 years ago
|
||
This forces a ServiceWorkerManager shutdown if the PBackground actor fails to initialize. The crash-stats stack indicates this can happen in practice when something triggers a ServiceWorkerManager for the first time during browser shutdown.
Attachment #8826238 -
Flags: review?(amarchesini)
Updated•8 years ago
|
Attachment #8826238 -
Flags: review?(amarchesini) → review+
Pushed by bkelly@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/e7da58c2df9a Don't force crash if ServiceWorkerManager tries to init during browser shutdown. r=baku
Assignee | ||
Comment 3•8 years ago
|
||
Comment on attachment 8826238 [details] [diff] [review] Don't force crash if ServiceWorkerManager tries to init during browser shutdown. r=baku Approval Request Comment [Feature/Bug causing the regression]: Service workers [User impact if declined]: Shutdown crashes [Is this code covered by automated tests?]: Service workers are heavily tested in automation, but they did not catch this problem. [Has the fix been verified in Nightly?]: It has landed in mozilla-inbound, but has not merged to nightly yet. [Needs manual test from QE? If yes, steps to reproduce]: None [List of other uplifts needed for the feature/fix]: None [Is the change risky?]: Minimal risk. [Why is the change risky/not risky?]: This replaces code that did a forced crash if ServiceWorkerManager tried to initialize during shutdown. This can happen normally, though. This patch simply uses the existing shutdown logic that was already in place for ServiceWorkerManager objects initialized before shutdown. It should have minimal risk of regressions. [String changes made/needed]:
Attachment #8826238 -
Flags: approval-mozilla-beta?
Attachment #8826238 -
Flags: approval-mozilla-aurora?
Comment 4•8 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/e7da58c2df9a
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox53:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment 5•8 years ago
|
||
Comment on attachment 8826238 [details] [diff] [review] Don't force crash if ServiceWorkerManager tries to init during browser shutdown. r=baku Crash fixes for issues with ServiceWorkers. Let's uplift this for the 51 RC build.
Attachment #8826238 -
Flags: approval-mozilla-beta?
Attachment #8826238 -
Flags: approval-mozilla-beta+
Attachment #8826238 -
Flags: approval-mozilla-aurora?
Attachment #8826238 -
Flags: approval-mozilla-aurora+
Comment 6•8 years ago
|
||
bugherder uplift |
https://hg.mozilla.org/releases/mozilla-aurora/rev/d4bf0c2182b6
status-firefox52:
--- → fixed
Comment 7•8 years ago
|
||
bugherder uplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/5581100c4359
status-firefox51:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•