Bug 1330679 Don't force crash if ServiceWorkerManager tries to init during browser shutdown. r=baku